crates/cargo-tsuno/tests/fixtures/verify_cli/pass/verifies_a_trivial_assertion_fixture.rs
#[tsuno::verify]
fn ok(x: i32) {
    tsuno::assert!(x == x);
}

fn main() {}
